@@ -9,13 +9,14 @@ import { Cell } from '@ephox/katamari';
 import PluginManager from 'tinymce/core/api/PluginManager';
 import * as Api from './api/Api';
 import * as Commands from './api/Commands';
+import * as Settings from './api/Settings';
 import * as Bindings from './core/Bindings';
 import * as Keyboard from './core/Keyboard';
 import * as Buttons from './ui/Buttons';
 
 export default function () {
   PluginManager.add('visualchars', (editor) => {
-    const toggleState = Cell(false);
+    const toggleState = Cell(Settings.isEnabledByDefault(editor));
 
     Commands.register(editor, toggleState);
     Buttons.register(editor, toggleState);
