@@ -1,4 +1,5 @@
 Version 5.6.0 (TBD)
+    Fixed the `visualchars` plugin causing the editor to steal focus when initialized #TINY-6282
     Fixed `fullpage` plugin altering text content in `editor.getContent()` #TINY-6541
     Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
     Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
